--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ APP_SECRET=789fcad0b7d7f8815e701c5719963df1
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+WEBSERVER_DOCKER_HOST_PORT=80
+DB_DOCKER_HOST_PORT=15432
+PHP_DOCKER_IDE_CONFIG=serverName=test.loc
